--- a/css/style.css
+++ b/css/style.css
@@ -359,6 +359,61 @@ a:active {
     background-position: -51px -27px;
 }
 
+.slider-pagination.white .slick-arrow:before,
+.slider-pagination.white .slick-arrow:after {
+    background-image: url(../slick/slider_arrows_white.png);
+}
+
+.slider-pagination.white .slick-prev:before {
+    background-position: -1px 0;
+}
+
+.slider-pagination.white .slick-next:before {
+    background-position: -68px 0;
+}
+
+.slider-pagination.white .slick-prev:after {
+    background-position: -1px 0;
+}
+
+.slider-pagination.white .slick-next:after {
+    background-position: -68px 0;
+}
+
+.slick-dots li {
+    display: inline-block;
+    vertical-align: top;
+    margin: 7px;
+    cursor: pointer;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%;
+}
+
+.slick-dots li button {
+    width: 14px;
+    height: 14px;
+    border: none;
+    cursor: pointer;
+    background: rgb(125, 125, 125);
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%;
+    font-size: 0;
+    line-height: 0;
+}
+
+.slick-dots li.slick-active button {
+    background: rgb(71, 125, 154);
+}
+
+
+.slick-dots li button:hover {
+    background: rgb(99, 151, 177);
+}
+
 /*-- /Slick Slider --*/
 
 
@@ -456,12 +511,12 @@ a:active {
     padding-top: 100px;
 }
 
-.right-coord {
+/*.right-coord {
     display: block;
     height: 1px;
     z-index: -1;
     opacity: .01;
-}
+}*/
 
 .site-nav {
     display: inline-block;
@@ -686,6 +741,11 @@ header {
     z-index: 7;
 }
 
+.header-site.inner_page {
+    background: rgba(255, 255, 255, .3);
+    padding-bottom: 4px;
+}
+
 .header-site .col {
 
 }
@@ -693,15 +753,15 @@ header {
 .header-site .col-1 {
     display: none;
     width: 32%;
-    padding-top: 8px;
+    padding-top: 4px;
 }
 
 .header-site .col-2 {
     width: 68%;
 }
 
-.header-site.inner-page .col-2 {
-    padding-top: 4px;
+.header-site.inner_page .col-2 {
+    /*padding-top: 4px;*/
 }
 
 .logo-link {
@@ -2081,14 +2141,14 @@ header {
 }
 
 .team-thumbnails .thumbnail.th-5 {
-    top: -45px;
-    right: -8.6%;
+    top: -52px;
+    right: -3%;
 }
 
 .team-thumbnails .thumbnail.th-5 .thumb-title {
     position: absolute;
-    top: 10px;
-    left: 270px;
+    top: 30px;
+    left: 332px;
 }
 
 .team-thumbnails .thumbnail.th-6 {
@@ -2099,8 +2159,8 @@ header {
 .team-thumbnails .thumbnail.th-6 .thumb-title {
     position: absolute;
     top: 50%;
-    left: -180px;
-    margin: -4px 0 0 0;
+    left: -197px;
+    margin: 16px 0 0 0;
 }
 
 /*-- /Slide 5 --*/
@@ -2590,6 +2650,472 @@ header {
 }
 
 /*-- /Slide 3 About Page --*/
+
+/*-- Slide 4 About Page --*/
+
+.slide-4-about {
+    overflow: hidden;
+    height: 100vh;
+    background: rgb(93, 141, 165);
+    padding-top: 0 !important;
+}
+
+.articles-slider-4-about-block {
+
+}
+
+.articles-slider-4-about {
+
+}
+
+.articles-slider-4-about .slide {
+    height: 100vh;
+}
+
+.articles-slider-4-about .slide .row {
+
+}
+
+.articles-slider-4-about .slide .left-article {
+    width: 49%;
+    padding-top: 65px;
+    padding-bottom: 120px;
+    position: relative;
+    z-index: 2;
+}
+
+.articles-slider-4-about .slide .left-article-header {
+    max-width: 440px;
+    margin: 0 0 49px 0;
+    padding: 21px 0 43px 124px;
+    position: relative;
+}
+
+.articles-slider-4-about .slide .h-block {
+    position: absolute;
+    top: initial;
+    bottom: 0;
+    left: -13px;
+    white-space: nowrap;
+    -webkit-transform: translate(0,100%) rotate(-90deg);
+    -webkit-transform-origin: 0 0;
+    -moz-transform: translate(0,100%) rotate(-90deg);
+    -moz-transform-origin: 0 0;
+    transform: translate(0,100%) rotate(-90deg);
+    transform-origin: 0 0;
+}
+
+.articles-slider-4-about .slide .h-block h3 {
+    font-family: "Bliss Pro", Arial, Verdana, sans-serif;
+    font-size: 38px;
+    line-height: 38px;
+    font-weight: normal;
+    color: #ffffff;
+    letter-spacing: -2px;
+}
+
+.articles-slider-4-about .slide .h-block h2 {
+    font-family: "Bliss Pro", Arial, Verdana, sans-serif;
+    font-size: 60px;
+    line-height: 60px;
+    font-weight: normal;
+    color: #ffffff;
+    letter-spacing: -2px;
+}
+
+.articles-slider-4-about .slide h3 {
+    font-family: "Bliss Pro", Arial, Verdana, sans-serif;
+    font-size: 40px;
+    line-height: 46px;
+    font-weight: 900;
+    color: #ffffff;
+}
+
+.articles-slider-4-about .slide p {
+    font-family: "Bliss Pro", Arial, Verdana, sans-serif;
+    font-size: 19px;
+    line-height: 24px;
+    font-weight: normal;
+    color: #ffffff;
+    padding: 5px 0;
+}
+
+.footer-slider-7 {
+    position: absolute;
+    bottom: 111px;
+    width: 100%;
+}
+
+.footer-7-inner {
+    width: 49%;
+    height: 1px;
+}
+
+.footer-slider-7 .socials-block {
+    display: inline-block;
+    vertical-align: bottom;
+    width: 50%;
+    position: relative;
+    top: -100%;
+}
+
+.footer-slider-7 .socials-list {
+    padding-bottom: 0;
+}
+
+.footer-slider-7 .slider-pagination-4_1 {
+    display: inline-block;
+    vertical-align: bottom;
+    width: 50%;
+    position: relative;
+    top: -100%;
+    padding-right: 28%;
+}
+
+.slider-pagination.white .count-slides-block {
+    margin: 0 0 18px 0;
+}
+
+.slider-pagination.white .count-slides-block p {
+    color: #ffffff;
+}
+
+.slider-pagination.white .count-slides-block p:after {
+    background: rgb(255, 255, 255);
+}
+
+.articles-slider-4-about .right-image {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 60%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.articles-slider-4-about .right-image img {
+    display: block;
+    min-width: 100%;
+    min-height: 100%;
+}
+
+/*-- /Slide 4 About Page --*/
+
+/*-- Slide 5 About Page --*/
+
+.slide-5-about .h-block-right {
+    position: absolute;
+    top: -21px;
+    right: -30px;
+    opacity: .4;
+    white-space: nowrap;
+    -webkit-transform: translate(100%, 0) rotate(90deg);
+    -webkit-transform-origin: 0 0;
+    -moz-transform: translate(100%, 0) rotate(90deg);
+    -moz-transform-origin: 0 0;
+    transform: translate(100%, 0) rotate(90deg);
+    transform-origin: 0 0;
+}
+
+.slide-5-about .h-block-right h2 {
+    font-family: "Bliss Pro", Arial, Verdana, sans-serif;
+    font-size: 135px;
+    line-height: 135px;
+    font-weight: bold;
+    color: #d0d9de;
+    text-transform: uppercase;
+}
+
+.slide-5-about .h-block-right h3 {
+    font-family: "Bliss Pro", Arial, Verdana, sans-serif;
+    font-size: 52px;
+    line-height: 52px;
+    font-weight: bold;
+    color: #d0d9de;
+}
+
+.articles-slider-3-block_1 {
+    width: 100%;
+}
+
+.slide-5-about .slide-two-cols .article {
+    width: 100%;
+    max-width: 537px;
+    margin: 37px 0 11px 0;
+}
+
+.slider-pagination-3_1 {
+    padding-left: 70%;
+    position: relative;
+    bottom: 79px;
+    left: 0;
+    width: 100%;
+    z-index: 2;
+}
+
+.range-pagination {
+
+}
+
+.range-pagination .slick-dots {
+    display: table !important;
+    width: 100%;
+}
+
+.range-pagination .slick-dots li {
+    display: table-cell;
+    vertical-align: middle;
+    height: 10px;
+    cursor: pointer;
+    position: relative;
+    border-radius: none !important;
+    width: auto;
+}
+
+.range-pagination .slick-dots li button {
+    display: block;
+    height: 1px;
+    width: 100%;
+    border-radius: none !important;
+    background: rgb(214, 214, 214);
+}
+
+.range-pagination .slick-dots li.slick-active button {
+    background: rgb(71, 125, 154);
+}
+
+.range-pagination .slick-dots li span.item-year {
+    /*display: block;*/
+    display: none;
+    width: 100%;
+    text-align: center;
+    font-family: "Bliss Pro", Arial, Verdana, sans-serif;
+    font-size: 14px;
+    line-height: 14px;
+    font-weight: normal;
+    color: #353535;
+    position: absolute;
+    bottom: -22px;
+}
+
+.range-pagination .slick-dots li:nth-child(1) span.item-year {
+    display: block;
+    text-align: left;
+}
+
+.range-pagination .slick-dots li:nth-child(3n) span.item-year {
+    display: block;
+    text-align: center;
+}
+
+.range-pagination .slick-dots li:last-child span.item-year {
+    display: block;
+    text-align: right;
+}
+
+.slider-nav-3_1 {
+    margin: -20px 0 0px 0;
+}
+
+.slider-nav-3_1 .col {
+    display: inline-block;
+    vertical-align: baseline;
+}
+
+.slider-nav-3_1 .col-1 {
+    width: 82%;
+    text-align: right;
+}
+
+.slider-nav-3_1 .col-1 .dots-pagination-append {
+    max-width: 964px;
+}
+
+.slider-nav-3_1 .col-2 {
+    width: 18%;
+    text-align: right;
+}
+
+/*-- /Slide 5 About Page --*/
+
+/*-- Slide 1 News Page --*/
+
+.news-h  {
+    position: absolute;
+    top: initial;
+    bottom: -10px;
+    left: -25px;
+    white-space: nowrap;
+    -webkit-transform: translate(0,100%) rotate(-90deg);
+    -webkit-transform-origin: 0 0;
+    -moz-transform: translate(0,100%) rotate(-90deg);
+    -moz-transform-origin: 0 0;
+    transform: translate(0,100%) rotate(-90deg);
+    transform-origin: 0 0;
+}
+
+.news-h  h2 {
+    font-family: "Bliss Pro", Arial, Verdana, sans-serif;
+    font-size: 130px;
+    line-height: 130px;
+    font-weight: bold;
+    color: #d0d9de;
+    letter-spacing: -1px;
+    text-transform: uppercase;
+}
+
+.black-h {
+    position: absolute;
+    top: 16px;
+    right: 0;
+}
+
+.black-h h3 {
+    font-family: "Bliss Pro", Arial, Verdana, sans-serif;
+    font-size: 40px;
+    line-height: 42px;
+    font-weight: 900;
+    color: #353535;
+}
+
+.news-slider-block {
+    width: 100%;
+    position: relative;
+}
+
+.news-slider-block .col-1 {
+    width: 31%;
+    padding-left: 130px;
+}
+
+.news-slider-block .col-2 {
+    width: 69%;
+}
+
+.news-miniatures-slider {
+    width: 180px;
+}
+
+.news-miniatures-slide {
+    display: block;
+    width: 180px;
+    padding: 10px 0;
+}
+
+.news-miniatures-slide .img-box {
+    display: block;
+    width: 100%;
+    height: 123px;
+    overflow: hidden;
+    background: rgb(220, 220, 220);
+}
+
+.news-miniatures-slide .img-box img {
+    display: block;
+    width: auto;
+    height: auto;
+    min-width: 100%;
+    min-height: 100%;
+}
+
+.news-miniatures-slide .descript {
+    padding: 2px 0;
+}
+
+.news-miniatures-slide .descript h3 {
+    font-family: "Bliss Pro", Arial, Verdana, sans-serif;
+    font-size: 23px;
+    line-height: 27px;
+    font-weight: 900;
+    color: #353535;
+}
+
+.news-miniatures-slide .descript p {
+    font-family: "Bliss Pro", Arial, Verdana, sans-serif;
+    font-size: 17px;
+    line-height: 20px;
+    font-weight: normal;
+    color: #555555;
+}
+
+.news-big-slider-block {
+    position: relative;
+}
+
+.news-big-slider .slide {
+    padding: 0;
+}
+
+.news-big-slider .img-box {
+    display: block;
+    width: 100%;
+    height: 342px;
+    overflow: hidden;
+    position: relative;
+    top: 0;
+    left: 0;
+}
+
+.news-big-slider .img-box img {
+    display: block;
+    width: auto;
+    height: auto;
+    min-width: 100%;
+    max-height: 100%;
+}
+
+.news-big-slider .article {
+    display: inline-block;
+    vertical-align: top;
+    max-width: 666px;
+    box-shadow: none;
+    position: relative;
+    top: 0;
+    padding: 25px 0;
+    text-align: left;
+}
+
+.news-big-slider .article:before {
+    display: none;
+}
+
+.news-big-slider .slide .article h3 {
+    font-family: "Bliss Pro", Arial, Verdana, sans-serif;
+    font-size: 40px;
+    line-height: 47px;
+    font-weight: 900;
+    color: #ffffff;
+    padding: 10px 0;
+}
+
+.news-big-slider .slide .article p {
+    font-family: "Bliss Pro", Arial, Verdana, sans-serif;
+    font-size: 17px;
+    line-height: 22px;
+    font-weight: normal;
+    color: #ffffff;
+    padding: 5px 0;
+}
+
+.news-slider-controls {
+    position: absolute;
+    bottom: -31px;
+    left: 0;
+}
+
+.news-slider-controls .inner {
+    min-width: 79px;
+}
+
+.socials-block_news {
+    text-align: right;
+}
+
+.socials-block_news .socials-list {
+    padding: 0;
+}
+
+/*-- /Slide 1 News Page --*/
 
 /*-------------------------------------------*/
 /* ----- FOOTER ------ */
