--- a/css/style.css
+++ b/css/style.css
@@ -3247,24 +3247,93 @@ header {
     line-height: 24px;
     font-weight: normal;
     color: #353535;
-    border-bottom: 1px solid transparent;
+    position: relative;
+    padding-right: 0;
+
+    -webkit-transition-property: color, padding-right;
+    -webkit-transition-duration: .3s;
+    -webkit-transition-timing-function: ease;
+
+    -moz-transition-property: color, padding-right;
+    -moz-transition-duration: .3s;
+    -moz-transition-timing-function: ease;
+
+    -ms-transition-property: color, padding-right;
+    -ms-transition-duration: .3s;
+    -ms-transition-timing-function: ease;
+
+    -o-transition-property: color, padding-right;
+    -o-transition-duration: .3s;
+    -o-transition-timing-function: ease;
+
+    transition-property: color, padding-right;
+    transition-duration: .3s;
+    transition-timing-function: ease;
+
 }
 
 .create-nav-list a:link,
 .create-nav-list a:visited {
     color: #353535;
-    border-bottom: 1px solid transparent;
+    padding-right: 0;
 }
 
 .create-nav-list a.active,
 .create-nav-list a:active {
     color: #5d8da5;
-    border-bottom: 1px solid #5d8da5;
+    padding-right: 3.6%;
 }
 
 .create-nav-list a:hover {
     color: #5d8da5;
-    border-bottom: 1px solid #5d8da5;
+    padding-right: 3.6%;
+}
+
+.create-nav-list a:after {
+    display: block;
+    content: "";
+    width: 1px;
+    height: 100%;
+    opacity: 0;
+    background: rgb(71, 125, 154);
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    -webkit-transition-property: opacity;
+    -webkit-transition-duration: .3s;
+    -webkit-transition-timing-function: ease;
+
+    -moz-transition-property: opacity;
+    -moz-transition-duration: .3s;
+    -moz-transition-timing-function: ease;
+
+    -ms-transition-property: opacity;
+    -ms-transition-duration: .3s;
+    -ms-transition-timing-function: ease;
+
+    -o-transition-property: opacity;
+    -o-transition-duration: .3s;
+    -o-transition-timing-function: ease;
+
+    transition-property: opacity;
+    transition-duration: .3s;
+    transition-timing-function: ease;
+
+}
+
+.create-nav-list a:link:after,
+.create-nav-list a:visited:after {
+    opacity: 0;
+}
+
+.create-nav-list a:active:after,
+.create-nav-list a.active:after {
+    opacity: 1;
+}
+
+.create-nav-list a:hover:after {
+    opacity: 1;
 }
 
 .we-created-images {
@@ -3432,7 +3501,29 @@ header {
     line-height: 24px;
     font-weight: normal;
     color: #353535;
+    position: relative;
     border-bottom: 1px solid transparent;
+
+    -webkit-transition-property: border;
+    -webkit-transition-duration: .3s;
+    -webkit-transition-timing-function: ease;
+
+    -moz-transition-property: border;
+    -moz-transition-duration: .3s;
+    -moz-transition-timing-function: ease;
+
+    -ms-transition-property: border;
+    -ms-transition-duration: .3s;
+    -ms-transition-timing-function: ease;
+
+    -o-transition-property: border;
+    -o-transition-duration: .3s;
+    -o-transition-timing-function: ease;
+
+    transition-property: border;
+    transition-duration: .3s;
+    transition-timing-function: ease;
+
 }
 
 .slide-list li a:link,
@@ -3542,9 +3633,5 @@ header {
 }
 
 .slide-page .footer.inner_page {
-
-}
-
-.socials-list li a .fa {
 
 }
