--- a/css/style.css
+++ b/css/style.css
@@ -3564,6 +3564,166 @@ header {
 
 /*-- /Slide 1 We Created Page --*/
 
+/*-- 404 Page --*/
+
+.page-not-found {
+    height: 100vh;
+    background-image: url(../img/404_bg.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.center {
+
+}
+
+.center:before {
+    display: inline-block;
+    vertical-align: middle;
+    content: "";
+    width: 1%;
+    min-height: 100vh;
+}
+
+.center-block {
+    display: inline-block;
+    vertical-align: middle;
+    width: 98%;
+}
+
+.center-block .row {
+    position: relative;
+}
+
+.h-block-404 {
+    display: block;
+    /*height: 100%;*/
+    /*width: 100vh;*/
+    position: absolute;
+    top: 13%;
+    bottom: 0;
+    right: 0;
+    white-space: nowrap;
+    -webkit-transform: translate(100%, 0) rotate(90deg);
+    -webkit-transform-origin: 0 0;
+    -moz-transform: translate(100%, 0) rotate(90deg);
+    -moz-transform-origin: 0 0;
+    transform: translate(100%, 0) rotate(90deg);
+    transform-origin: 0 0;
+}
+
+.h-block-404 h1 {
+    font-family: "Bliss Pro", Arial, Verdana, sans-serif;
+    font-size: 27px;
+    line-height: 30px;
+    font-weight: normal;
+    color: #ffffff;
+    text-transform: uppercase;
+}
+
+.h-block-404 h1 span.small{
+    font-family: "Bliss Pro", Arial, Verdana, sans-serif;
+    font-size: 19px;
+    line-height: 30px;
+    font-weight: normal;
+    color: #ffffff;
+    text-transform: none;
+}
+
+h2.h2-404 {
+    font-family: "Bliss Pro", Arial, Verdana, sans-serif;
+    font-size: 27px;
+    line-height: 30px;
+    font-weight: 900;
+    color: #ffffff;
+    padding: 0 0 0 1.5%;
+    text-transform: uppercase;
+}
+
+h2.h2-404:before {
+    display: inline-block;
+    vertical-align: middle;
+    content: "";
+    width: 9.5%;
+    height: 1px;
+    position: relative;
+    top: -4px;
+    right: 1.5%;
+    background: rgb(255, 255, 255);
+}
+
+.p-404 {
+    position: relative;
+    top: -23px;
+    padding: 0 0 0 10.3%;
+    font-family: "Bliss Pro", Arial, Verdana, sans-serif;
+    font-size: 251px;
+    line-height: 251px;
+    font-weight: 900;
+    color: #ffffff;
+}
+
+.back-link-block {
+    text-align: center;
+}
+
+.transparent-pill {
+    display: inline-block;
+    vertical-align: top;
+    min-width: 290px;
+    margin: 28px auto;
+    padding: 7px 2% 8px 2%;
+    cursor: pointer;
+    text-align: center;
+    background: rgba(255, 255, 255, 0);
+    border: 1px solid #ffffff;
+    font-family: "Bliss Pro", Arial, Verdana, sans-serif;
+    font-size: 19px;
+    line-height: 40px;
+    font-weight: normal;
+    color: #ffffff;
+
+    -webkit-transition-property: background, color;
+    -webkit-transition-duration: .3s;
+    -webkit-transition-timing-function: ease;
+
+    -moz-transition-property: background, color;
+    -moz-transition-duration: .3s;
+    -moz-transition-timing-function: ease;
+
+    -ms-transition-property: background, color;
+    -ms-transition-duration: .3s;
+    -ms-transition-timing-function: ease;
+
+    -o-transition-property: background, color;
+    -o-transition-duration: .3s;
+    -o-transition-timing-function: ease;
+
+    transition-property: background, color;
+    transition-duration: .3s;
+    transition-timing-function: ease;
+
+}
+
+.transparent-pill:link,
+.transparent-pill:visited {
+     background: rgba(255, 255, 255, 0);
+     color: #ffffff;
+}
+
+.transparent-pill:active,
+.transparent-pill.active {
+     background: rgba(255, 255, 255, 1);
+     color: #608eae;
+}
+
+.transparent-pill:hover {
+     background: rgba(255, 255, 255, 1);
+     color: #608eae;
+}
+
+/*-- /404 Page --*/
+
 /*-------------------------------------------*/
 /* ----- FOOTER ------ */
 /*-------------------------------------------*/
