--- a/css/style.css
+++ b/css/style.css
@@ -2999,7 +2999,8 @@ header {
 .news-miniatures-slide {
     display: block;
     width: 180px;
-    padding: 10px 0;
+    /*margin: 10px 0;*/
+    padding: 9px 0;
 }
 
 .news-miniatures-slide .img-box {
@@ -3046,7 +3047,7 @@ header {
     padding: 0;
 }
 
-.news-big-slider .img-box {
+.news-slider-inner .img-box {
     display: block;
     width: 100%;
     height: 342px;
@@ -3056,7 +3057,7 @@ header {
     left: 0;
 }
 
-.news-big-slider .img-box img {
+.news-slider-inner .img-box img {
     display: block;
     width: auto;
     height: auto;
@@ -3064,7 +3065,7 @@ header {
     max-height: 100%;
 }
 
-.news-big-slider .article {
+.news-slider-inner .article {
     display: inline-block;
     vertical-align: top;
     max-width: 666px;
@@ -3075,11 +3076,11 @@ header {
     text-align: left;
 }
 
-.news-big-slider .article:before {
+.news-slider-inner .article:before {
     display: none;
 }
 
-.news-big-slider .slide .article h3 {
+.news-slider-inner .article h3 {
     font-family: "Bliss Pro", Arial, Verdana, sans-serif;
     font-size: 40px;
     line-height: 47px;
@@ -3088,13 +3089,19 @@ header {
     padding: 10px 0;
 }
 
-.news-big-slider .slide .article p {
+.news-slider-inner .article p {
     font-family: "Bliss Pro", Arial, Verdana, sans-serif;
     font-size: 17px;
     line-height: 22px;
     font-weight: normal;
     color: #ffffff;
     padding: 5px 0;
+}
+
+.news-inner-controls {
+    display: inline-block;
+    vertical-align: top;
+    outline: 1px solid red;
 }
 
 .news-slider-controls {
@@ -3115,17 +3122,50 @@ header {
     padding: 0;
 }
 
+.news-inner-arrows {
+    display: block;
+    min-width: 120px;
+    text-align: center;
+    position: absolute;
+    top: 359px;
+    left: 3%;
+}
+
+.news-inner-arrows .slick-arrow {
+    width: 44px;
+    height: 9px;
+    float: left;
+    margin: 0 7px;
+    cursor: pointer;
+    background: transparent;
+    position: relative;
+    border: 1px solid transparent;
+    background-image: url(../img/blue_white_arrows_sprite.png);
+    background-repeat: no-repeat;
+}
+
+.news-inner-arrows .slick-prev {
+    background-position: -1px 0;
+}
+
+.news-inner-arrows .slick-next {
+    background-position: -58px 0;
+}
+
+.news-inner-arrows .slick-arrow:before,
+.news-inner-arrows .slick-arrow:after {
+    display: none;
+}
+
 /*-- /Slide 1 News Page --*/
 
 /*-- Slide 1 We Created Page --*/
 
 .slide-1-we-create {
-    position: relative;
+    /*position: relative;*/
 }
 
 .we-create-slider-block {
-    height: 100vh;
-    /*padding-top: 68px;*/
     position: relative;
 }
 
@@ -3148,8 +3188,7 @@ header {
 
 .we-create-h {
     position: absolute;
-    top: initial;
-    bottom: 23px;
+    bottom: 21px;
     left: -26px;
     white-space: nowrap;
     -webkit-transform: translate(0,100%) rotate(-90deg);
@@ -3234,7 +3273,7 @@ header {
 }
 
 .create-nav-list {
-
+   padding: 5px 0 0 0;
 }
 
 .create-nav-list li {
@@ -3336,43 +3375,301 @@ header {
     opacity: 1;
 }
 
-.we-created-images {
+/*-- Galery --*/
+
+.gallery {
     position: relative;
-    text-align: left;
 }
 
-.we-created-images img {
+.gallery-slider-block {
+    position: relative;
+}
+
+.gallery-slider {
+   display: block;
+   width: 100%;
+   max-width: 596px;    
+   height: 473px;
+   position: relative;
+   z-index: 1;
+}
+
+.gallery-slider .slide {
+    display: block;
+    width: 100%;
+    height: 473px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -o-border-radius: 4px;
+    border-radius: 4px;
+}
+
+.gallery-slider .slide .slide-info {
+    display: none;
+}
+
+.slide-info h3 {
+    font-family: "Bliss Pro", Arial, Verdana, sans-serif;
+    font-size: 15px;
+    line-height: 20px;
+    font-weight: normal;
+    font-style: normal;
+    color: #ffffff;
+    padding: 4px 0;
+}
+
+.gallery-slider .slide .img-box {
+    width: 100%;
+    height: 473px;
+    overflow: hidden;
+    border: none;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
-    -ms-border-radius: 2px;
     -o-border-radius: 2px;
     border-radius: 2px;
+    -webkit-pointer-events: none;
+    pointer-events: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    
+    -webkit-transition-property: opacity;
+    -webkit-transition-duration: .7s;
+    -webkit-transition-timing-function: ease;
+
+    -moz-transition-property: opacity;
+    -moz-transition-duration: .7s;
+    -moz-transition-timing-function: ease;
+
+    -ms-transition-property: opacity;
+    -ms-transition-duration: .7s;
+    -ms-transition-timing-function: ease;
+
+    -o-transition-property: opacity;
+    -o-transition-duration: .7s;
+    -o-transition-timing-function: ease;
+
+    transition-property: opacity;
+    transition-duration: .7s;
+    transition-timing-function: ease;
 }
 
-.we-created-images .img-1 {
-    display: inline-block;
-    vertical-align: top;
+.gallery-slider .slide img {
+    display: block;
     width: auto;
     height: auto;
-    max-width: 84%;
-    position: relative;
-    z-index: 2;
+    min-height: 100%;
+    min-width: 100%;
+    border: none;
 }
 
-.we-created-images .img-2 {
+.gallery-slider .slide {
+    cursor: pointer;
+    left: 0;
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+    background: rgba(255, 255, 255, 1);
+
+    -webkit-transition-property: transform, left, border;
+    -webkit-transition-duration: .7s;
+    -webkit-transition-timing-function: ease;
+
+    -moz-transition-property: transform, left, border;
+    -moz-transition-duration: .7s;
+    -moz-transition-timing-function: ease;
+
+    -ms-transition-property: transform, left, border;
+    -ms-transition-duration: .7s;
+    -ms-transition-timing-function: ease;
+
+    -o-transition-property: transform, left, border;
+    -o-transition-duration: .7s;
+    -o-transition-timing-function: ease;
+
+    transition-property: transform, left, border;
+    transition-duration: .7s;
+    transition-timing-function: ease;
+}
+
+.gallery-slider .slide:nth-child(1) {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+    left: 0;
+    z-index: 4;
+}
+
+.gallery-pagination.bottom_pagination {
     position: absolute;
-    top: 45px;
-    right: 0;
+    bottom: -23px;
+    left: -20%;
+    z-index: 3;
 }
 
-.we-created .article {
+.gallery-pagination-content {
+    display: inline-block;
+    vertical-align: top;
+    margin: 0 8px;
+}
+
+.gallery-pagination-content p {
+   display: inline-block;
+   vertical-align: top;
+   font-family: "Clear Sans", Arial, Verdana, sans-serif;
+   font-size: 15px;
+   line-height: 24px;
+   font-weight: normal;
+   color: #ffffff;
+   padding: 0;
+}
+
+.gallery-pagination-content .slash:before {
+    display: inline-block;
+    vertical-align: middle;
+    content: "";
+    width: 40px;
+    height: 1px;
+    margin: 0 2px 0 4px;
+    background: rgb(125, 125, 125);
+}
+
+.gallery-pagination-content p {
+    display: inline-block;
+    vertical-align: baseline;
+    font-family: "Bliss Pro", Arial, Verdana, sans-serif;
+    font-size: 28px;
+    line-height: 28px;
+    font-weight: 500;
+    color: #353535;
+}
+
+.gallery-pagination-content .count-slides {
+    display: inline-block;
+    vertical-align: baseline;
+    font-family: "Bliss Pro", Arial, Verdana, sans-serif;
+    font-size: 19px;
+    line-height: 28px;
+    font-weight: normal;
+    color: #353535;
+}
+
+.gallery-pagination-content .count-slides {
+    display: inline-block;
+    vertical-align: baseline;
+    font-family: "Bliss Pro", Arial, Verdana, sans-serif;
+    font-size: 19px;
+    line-height: 28px;
+    font-weight: normal;
+    color: #353535;
+}
+
+.gallery-arrows {
+    text-align: center;
+    margin: 20px 0 0 0;
+}
+
+.gallery-arrow.prev {
+    float: left;
+}
+
+.gallery-arrow.next {
+    float: right;
+}
+
+.gallery-arrow {
+    display: block;
+    width: 14px;
+    height: 23px;
+    cursor: pointer;
+    background: transparent;
+    position: relative;
+    border: 1px solid transparent;
+}
+
+.gallery-arrow:before,
+.gallery-arrow:after {
+    display: block;
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-image: url(../slick/slider_arrows.png);
+    background-repeat: no-repeat;
+    background-position: 0 0;
+
+    -webkit-transition-property: opacity;
+    -webkit-transition-duration: .3s;
+    -webkit-transition-timing-function: ease;
+
+    -moz-transition-property: opacity;
+    -moz-transition-duration: .3s;
+    -moz-transition-timing-function: ease;
+
+    -ms-transition-property: opacity;
+    -ms-transition-duration: .3s;
+    -ms-transition-timing-function: ease;
+
+    -o-transition-property: opacity;
+    -o-transition-duration: .3s;
+    -o-transition-timing-function: ease;
+
+    transition-property: opacity;
+    transition-duration: .3s;
+    transition-timing-function: ease;
+
+}
+
+.gallery-arrow:before {
+    opacity: 1;
+}
+
+.gallery-arrow:after {
+    opacity: 0;
+}
+
+.gallery-arrow:hover:before {
+    opacity: 0;
+}
+
+.gallery-arrow:hover:after {
+    opacity: 1;
+}
+
+.gallery-arrow.prev:before {
+    background-position: -2px 0;
+}
+
+.gallery-arrow.next:before {
+    background-position: -51px 0;
+}
+
+.gallery-arrow.prev:after {
+    background-position: -2px -27px;
+}
+
+.gallery-arrow.next:after {
+    background-position: -51px -27px;
+}
+
+.gallery-article {
     display: inline-block;
     vertical-align: top;
     width: 73%;
     margin: 26px 0;
 }
 
-.we-created .article h3 {
+.gallery-article h3 {
     font-family: "Bliss Pro", Arial, Verdana, sans-serif;
     font-size: 40px;
     line-height: 48px;
@@ -3381,7 +3678,7 @@ header {
     padding: 14px 0;
 }
 
-.we-created .article p {
+.gallery-article p {
     font-family: "Bliss Pro", Arial, Verdana, sans-serif;
     font-size: 17px;
     line-height: 24px;
@@ -3391,8 +3688,8 @@ header {
 
 .slide-popup-block {
     position: absolute;
-    top: 66%;
-    right: 11.3%;
+    bottom: -13px;
+    right: 18%;
     z-index: 3;
 }
 
@@ -3545,13 +3842,13 @@ header {
     position: absolute;
     bottom: 0;
     left: 0;
+    z-index: 2;
 }
 
 .we-created-socilas,
 .slider-pagination-8  {
     display: inline-block;
     vertical-align: bottom;
-    width: 50%;
 }
 
 .slider-pagination-8 {
@@ -3795,3 +4092,4 @@ h2.h2-404:before {
 .slide-page .footer.inner_page {
 
 }
+
