--- a/css/style.css
+++ b/css/style.css
@@ -742,7 +742,7 @@ header {
 }
 
 .header-site.inner_page {
-    background: rgba(255, 255, 255, .3);
+    background: rgba(255, 255, 255, 1);
     padding-bottom: 4px;
 }
 
